Update src/main/java/org/pwss/view/popup_menu/MonitoredDirectoryPopupFactory.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>